# bevy_window_manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/commands/: release.md  release_version.md  test.md  test2.md  test3.md
.claude/config/: linux.json  linux_monitor0.json  linux_monitor1.json  macos.json  macos_monitor0.json  macos_monitor1.json  windows.json
.claude/config/ron/linux/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  fullscreen_borderless_to_mon0.ron  fullscreen_borderless_to_mon1.ron  fullscreen_exclusive_to_mon0.ron  fullscreen_exclusive_to_mon1.ron  keyboard_snap.ron  monitor_boundary_detection.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron  position_size_restore_mon0.ron  position_size_restore_mon1.ron  size_restore_mon0.ron  size_restore_mon1.ron
.claude/config/ron/linux_0/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  fullscreen_borderless.ron  fullscreen_borderless_to_mon0.ron  fullscreen_exclusive.ron  size_restore.ron
.claude/config/ron/linux_1/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  fullscreen_borderless.ron  fullscreen_borderless_to_mon1.ron  fullscreen_exclusive.ron  position_size_restore.ron  size_restore.ron
.claude/config/ron/macos/: cross_monitor_low_to_high.ron  discovery.ron  dpi_drag_size_stability.ron  fullscreen_borderless_green_button.ron  fullscreen_borderless_mon0.ron  fullscreen_exclusive_mon0.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron
.claude/config/ron/macos_0/: fullscreen_borderless_programmatic.ron  fullscreen_exclusive.ron
.claude/config/ron/macos_1/: same_monitor_restore.ron
.claude/config/ron/windows/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  discovery.ron  dpi_drag_stability.ron  fullscreen_borderless_mon0.ron  fullscreen_borderless_mon1.ron  fullscreen_exclusive_mon0.ron  fullscreen_exclusive_mon1.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron  same_monitor_restore_mon1.ron
.claude/plans/: window-subclassing.md
.claude/powershell/: check_both_states.ps1  check_window_frame.ps1  find_ron.ps1  get_monitors.ps1  run_debug.ps1
.claude/scripts/: detect_konsole_monitor.sh  detect_zed_monitor.sh  linux_test.sh  macos_move_zed_to_monitor.sh  move_zed_to_monitor.sh  release_version_validate.sh  windows_detect_zed_monitor.ps1  windows_move_zed_to_monitor.ps1
.claude/test/: testplan.md
.github/workflows/: ci.yml
examples/: custom_app_name.rs  custom_path.rs  fullscreen_crash_on_exit.rs  fullscreen_modes.rs  restore_window.rs  simple.rs  simple_restore.rs
examples/custom_app_name/: main.rs
examples/custom_path/: constants.rs  main.rs
examples/restore_window/: constants.rs  debug.rs  display.rs  events.rs  input.rs  main.rs  mode_observers.rs  setup.rs  state.rs
src/: config.rs  constants.rs  events.rs  lib.rs  macos_drag_back_fix.rs  macos_fullscreen_fix.rs  macos_tabbing_fix.rs  main.rs  managed.rs  monitor.rs  monitors.rs  observers.rs  platform.rs  restore_plan.rs  restore_target.rs  saved.rs  state.rs  state_format.rs  systems.rs  types.rs  window_ext.rs  windows_dpi_fix.rs  x11_frame_extents.rs  x11_position_fix.rs
src/persistence/: format.rs  load.rs  mod.rs  save.rs  state.rs  types.rs
src/restore/: apply.rs  mod.rs  plan.rs  settle.rs  settle_state.rs  target.rs  target_position.rs  winit_info.rs
src/restore/apply/: bootstrap.rs  cross_dpi.rs  mod.rs  restore.rs
src/systems/: mod.rs  monitor.rs  restore.rs  save.rs  settle.rs
tests/config/: linux.json  macos.json  windows.json
tests/config/ron/linux/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  discovery.ron  fullscreen_borderless_to_mon0.ron  fullscreen_borderless_to_mon1.ron  fullscreen_exclusive_to_mon0.ron  fullscreen_exclusive_to_mon1.ron  keyboard_snap.ron  monitor_boundary_detection.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron  position_size_restore_mon0.ron  position_size_restore_mon1.ron  size_restore_mon0.ron  size_restore_mon1.ron
tests/config/ron/macos/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  discovery.ron  fullscreen_borderless_mon0.ron  fullscreen_exclusive_mon0.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron  same_monitor_restore_mon1.ron
tests/config/ron/windows/: cross_monitor_high_to_low.ron  cross_monitor_low_to_high.ron  dpi_drag_stability.ron  fullscreen_borderless_mon0.ron  fullscreen_borderless_mon1.ron  fullscreen_exclusive_mon0.ron  fullscreen_exclusive_mon1.ron  multi_window_0_0.ron  multi_window_0_1.ron  multi_window_1_0.ron  multi_window_1_1.ron  same_monitor_restore_mon0.ron  same_monitor_restore_mon1.ron
tests/scripts/: linux_test.sh  macos_detect_zed_monitor.sh  prebuild.sh  run_test.py  run_test.sh
