[package]
name = "bevy_window_manager"
version = "0.17.1"
edition = "2024"
description = "Bevy plugin for window state management, multi-monitor support, and position restoration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/natemccoy/bevy_window_manager"
keywords = ["bevy", "window", "monitor", "multi-monitor", "gamedev"]
categories = ["game-development", "gui"]

[lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"

# Screen dimensions are always within safe ranges for these casts
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[lib]
name = "bevy_window_manager"
path = "src/lib.rs"

[dependencies]
bevy = "0.17.3"
dirs = "6.0"
ron = "0.12"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
] }

[profile.dev.package."*"]
opt-level = 3
